--- a/index.html
+++ b/index.html
@@ -53,6 +53,75 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section class="about-container">
+            <div class="about">
+                <h1>About Me</h1>
+                <p class="para">I, m a designer & developer with a passion for web design. I enjoy developing simple,
+                    clean
+                    and slick
+                    websites that provide real value to the end user. Thousands of clients have procured exceptional
+                    resulfs
+                    while working with me. Delivering work within time and budget which meets clients requirements in
+                    our
+                    mata.</p>
+                <div class="about-info">
+                    <div class="infos">
+                        <p>Name:</p>
+                        <h4>Mary Hardy</h4>
+                    </div>
+                    <div class="infos">
+                        <p>Name:</p>
+                        <h4>Mary Hardy</h4>
+                    </div>
+                    <div class="infos">
+                        <p>Name:</p>
+                        <h4>Mary Hardy</h4>
+                    </div>
+                    <div class="infos">
+                        <p>Name:</p>
+                        <h4>Mary Hardy</h4>
+                    </div>
+
+                </div>
+            </div>
+            <div class="what_do">
+                <h1 class="what">What I do</h1>
+                <p class="do">I have more than 10 years experience building software for clients all over the world.
+                    Below is a
+                    quick overview of my main technical skill sets and technologies i use. Want to find out more about
+                    my experience? Check out my online resume and project portfolio.</p>
+                <div class="skills">
+                    <div class="skill">
+                        <img src="portfolio-resources-main/images/icons/js.png" alt="">
+                        <h3>Vanilla Javascript</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="portfolio-resources-main/images/icons/react.png" alt="">
+                        <h3>React</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="portfolio-resources-main/images/icons/nodejs.png" alt="">
+                        <h3>Node.js</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="portfolio-resources-main/images/icons/mongo.png" alt="">
+                        <h3>MongoDB</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+    </main>
 </body>
 
 </html>
