--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY First Portfolio</title>
+    <script src="https://kit.fontawesome.com/ac5b348608.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,8 +42,8 @@
                             Morning because as to
                             society behaved moments.</p>
                         <div class="down">
-                            <button>download Cv</button>
-                            <button>Contact</button>
+                            <button><i class="fa-solid fa-download"></i>download Cv</button>
+                            <button><i class="fa-regular fa-phone"></i>Contact</button>
                         </div>
                     </div>
                     <div class="half main-pic">
@@ -119,9 +120,68 @@
 
                 </div>
             </div>
+            <h2 class="ressume">A summary of My Resume</h2>
+            <div class="resume">
 
+                <div class="education">
+                    <h2>My Education</h2>
+                    <div class="edu">
+                        <h3>Master in computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="edu">
+                        <h3>Master in computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="edu">
+                        <h3>Master in computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="education">
+                    <h2>My Education</h2>
+                    <div class="edu">
+                        <h3>Master in computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="edu">
+                        <h3>Master in computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="edu">
+                        <h3>Master in computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+
+                </div>
+            </div>
         </section>
+
     </main>
+    <button class="btn"><i class="fa-solid fa-download"></i>download CV</button>
 </body>
 
 </html>
