--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ac5b348608.js" crossorigin="anonymous"></script>
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <!-- <link
@@ -179,9 +180,30 @@
                 </div>
             </div>
         </section>
-
+        <button class="btn"><i class="fa-solid fa-download"></i>download CV</button>
     </main>
-    <button class="btn"><i class="fa-solid fa-download"></i>download CV</button>
+    <footer>
+        <div class="footer_container">
+            <div class="half connect">
+                <h2>Lets Connect</h2>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                    Monday through Friday.</p>
+                <div class="icons">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+            </div>
+            <div class="half msg_me">
+                <h2 style="margin-bottom: 24px;">Let’s Message me</h2>
+                <input type="text" placeholder="Your name">
+                <input type="email" name="email" id="" placeholder="Your email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <button class="m_btn">submit</button>
+
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
