--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <header>
+    <header class="hide">
         <nav>
             <div>
                 <div class="nav-container">
@@ -56,8 +56,8 @@
         </nav>
     </header>
     <main>
-        <section class="about-container">
-            <div class="about">
+        <section class="about-container ">
+            <div class="about hide">
                 <h1>About Me</h1>
                 <p class="para">I, m a designer & developer with a passion for web design. I enjoy developing simple,
                     clean
@@ -121,10 +121,10 @@
 
                 </div>
             </div>
-            <h2 class="ressume">A summary of My Resume</h2>
-            <div class="resume">
+            <h2 class="ressume hide">A summary of My Resume</h2>
+            <div class="resume hide">
 
-                <div class="education">
+                <div class="education ">
                     <h2>My Education</h2>
                     <div class="edu">
                         <h3>Master in computer Engineering</h3>
@@ -151,7 +151,7 @@
                     </div>
 
                 </div>
-                <div class="education">
+                <div class="education hide">
                     <h2>My Education</h2>
                     <div class="edu">
                         <h3>Master in computer Engineering</h3>
@@ -180,9 +180,9 @@
                 </div>
             </div>
         </section>
-        <button class="btn"><i class="fa-solid fa-download"></i>download CV</button>
+        <button class="btn hide"><i class="fa-solid fa-download"></i>download CV</button>
     </main>
-    <footer>
+    <footer class="hide">
         <div class="footer_container">
             <div class="half connect">
                 <h2>Lets Connect</h2>
