--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 </div>
             </div>
-            <div class="what_do">
+            <div class="what_do hide">
                 <h1 class="what">What I do</h1>
                 <p class="do">I have more than 10 years experience building software for clients all over the world.
                     Below is a
@@ -121,8 +121,8 @@
 
                 </div>
             </div>
-            <h2 class="ressume hide">A summary of My Resume</h2>
-            <div class="resume hide">
+            <h2 class="ressume">A summary of My Resume</h2>
+            <div class="resume">
 
                 <div class="education ">
                     <h2>My Education</h2>
@@ -151,7 +151,7 @@
                     </div>
 
                 </div>
-                <div class="education hide">
+                <div class="education">
                     <h2>My Education</h2>
                     <div class="edu">
                         <h3>Master in computer Engineering</h3>
